--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel = "stylesheet" href = "./index.css"/>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -26,7 +29,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body class = "bg-pattern">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
